# metavis

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example_data/: Call.csv  DEBUG_Loc.csv  ExprPointsToArena.csv  FreeOfArenaPtr.csv  Return.csv  VarPointsToArena.csv  debug.json
src/: app_state.rs  diagnostic_list.rs  file_picker.rs  input.rs  list.rs  main.rs  source_view.rs  ui.rs
src/parser/: csv_parser.rs
src/parsers/: analysis.rs  csv_file.rs  csv_parser.rs  debug_file.rs  diagnostic.rs  lib.rs  loc_file.rs  metainfo.rs  mod.rs
src/ui/: main_loop.rs
