[package]
name = "metavis"
version = "1.0.0"
edition = "2021"
authors = ["Emil Blennow"]
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
coredump = "0.1.2"
crossterm = "0.27.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tui-textarea = "0.3.1"
